<resources>
    <string name="app_name">aplication</string>
    <string name="TextView_Expresion">0</string>
    <string name="buttonDigito0_Text">0</string>
    <string name="buttonDigito1_Text">1</string>
    <string name="buttonDigito2_Text">2</string>
    <string name="buttonDigito3_Text">3</string>
    <string name="buttonDigito4_Text">4</string>
    <string name="buttonDigito5_Text">5</string>
    <string name="buttonDigito6_Text">6</string>
    <string name="buttonDigito7_Text">7</string>
    <string name="buttonDigito8_Text">8</string>
    <string name="buttonDigito9_Text">9</string>
    <string name="buttonOperadorDivisio_Text">/</string>
    <string name="buttonOperadorMultiplicacion_Text">*</string>
    <string name="buttonOperadorSumar_Text">+</string>
    <string name="buttonOperadorRestar_Text">-</string>
    <string name="buttonOperadorExponente_Text">^</string>
    <string name="buttonOperadorClear_Text">C</string>
</resources>
