<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textViewExpresion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|right|center_vertical"
        android:hapticFeedbackEnabled="true"
        android:text="@string/TextView_Expresion"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">
        <Button
            android:id="@+id/buttonDigito7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonDigito7_Text"
            android:textSize="@dimen/textSize_Digito"
            android:background="@color/colorDigitos"
            android:textColor="@android:color/white"
            style="?android:attr/borderlessButtonStyle"
            />

        <Button
            android:id="@+id/buttonDigito8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonDigito8_Text"
            android:textSize="@dimen/textSize_Digito"
            android:background="@color/colorDigitos"
            android:textColor="@android:color/white"
                style="?android:attr/borderlessButtonStyle"
            />

        <Button
            android:id="@+id/buttonDigito9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonDigito9_Text"
            android:textSize="@dimen/textSize_Digito"
            android:background="@color/colorDigitos"
            android:textColor="@android:color/white"
               style="?android:attr/borderlessButtonStyle"
            />

        <Button
            android:id="@+id/buttonOperadorDivision"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonOperadorDivisio_Text"
            android:textSize="@dimen/textSize_Operador"
            android:background="@color/colodOperadores"
            android:textColor="@android:color/white"
             style="?android:attr/borderlessButtonStyle"
            />

        <Button
            android:id="@+id/buttonOperadorClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonOperadorClear_Text"
            android:textSize="@dimen/textSize_Operador"
            android:background="@color/colodOperadores"
            android:textColor="@android:color/white"
             style="?android:attr/borderlessButtonStyle"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/buttonDigito4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonDigito4_Text"
            android:textSize="@dimen/textSize_Digito"
            android:background="@color/colorDigitos"
            android:textColor="@android:color/white"
             style="?android:attr/borderlessButtonStyle"
            />

        <Button
            android:id="@+id/buttonDigito5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonDigito5_Text"
            android:textSize="@dimen/textSize_Digito"
            android:background="@color/colorDigitos"
            android:textColor="@android:color/white"
            style="?android:attr/borderlessButtonStyle"
            />

        <Button
            android:id="@+id/buttonDigito6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonDigito6_Text"
            android:textSize="@dimen/textSize_Digito"
            android:background="@color/colorDigitos"
            android:textColor="@android:color/white"
             style="?android:attr/borderlessButtonStyle"
            />

        <Button
            android:id="@+id/buttonOperadorMultiplicacion"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonOperadorMultiplicacion_Text"
            android:textSize="@dimen/textSize_Operador"
            android:background="@color/colodOperadores"
            android:textColor="@android:color/white"
            style="?android:attr/borderlessButtonStyle"
            />

        <Button
            android:id="@+id/buttonOperadorPotencia"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonOperadorExponente_Text"
            android:textSize="@dimen/textSize_Operador"
            android:background="@color/colodOperadores"
            android:textColor="@android:color/white"
             style="?android:attr/borderlessButtonStyle"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/buttonDigito1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonDigito1_Text"
            android:textSize="@dimen/textSize_Digito"
            android:background="@color/colorDigitos"
            android:textColor="@android:color/white"
             style="?android:attr/borderlessButtonStyle"
            />

        <Button
            android:id="@+id/buttonDigito2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonDigito2_Text"
            android:textSize="@dimen/textSize_Digito"
            android:background="@color/colorDigitos"
            android:textColor="@android:color/white"
            style="?android:attr/borderlessButtonStyle"
            />

        <Button
            android:id="@+id/buttonDigito3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonDigito3_Text"
            android:textSize="@dimen/textSize_Digito"
            android:background="@color/colorDigitos"
            android:textColor="@android:color/white"
             style="?android:attr/borderlessButtonStyle"
            />

        <Button
            android:id="@+id/buttonOperadorResta"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonOperadorRestar_Text"
            android:textSize="@dimen/textSize_Operador"
            android:background="@color/colodOperadores"
            android:textColor="@android:color/white"
            style="?android:attr/borderlessButtonStyle"
            />

        <Button
            android:id="@+id/buttonOperadorSuma"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonOperadorSumar_Text"
            android:textSize="@dimen/textSize_Operador"
            android:background="@color/colodOperadores"
            android:textColor="@android:color/white"
             style="?android:attr/borderlessButtonStyle"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/buttonDigito0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/buttonDigito0_Text"
            android:textSize="@dimen/textSize_Digito"
            android:background="@color/colorDigitos"
            android:textColor="@android:color/white"
             style="?android:attr/borderlessButtonStyle"
            />

        <Button
            android:id="@+id/buttonDigitoPunto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="."
            android:textSize="@dimen/textSize_Digito"
            android:background="@color/colorDigitos"
            android:textColor="@android:color/white"
            style="?android:attr/borderlessButtonStyle"
            />

        <Button
            android:id="@+id/buttonRaiz"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="$"
            android:textSize="@dimen/textSize_Digito"
            android:background="@color/colodOperadores"
            android:textColor="@android:color/white"
             style="?android:attr/borderlessButtonStyle"
            />

        <Button
            android:id="@+id/buttonOperadorIgual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="="
            android:textSize="@dimen/textSize_Operador"
            android:background="@color/colodOperadores"
            android:textColor="@android:color/white"
             style="?android:attr/borderlessButtonStyle"
            />

    </LinearLayout>

</LinearLayout>